--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   #Architecture Packages
   mobx: ^2.3.0                            #для стейтменеджмента
   flutter_mobx: ^2.2.0+1                  #для стейтменеджмента
-  auto_route: ^7.8.4                      #для навигации между страницами
+  auto_route: ^8.1.3                      #для навигации между страницами
   dio: ^5.4.0                             #для REST/CURL запросов
   retrofit: ^4.0.3                        #для упрощенной разработки запросов на основе dio/http
   #  web_socket_channel: ^2.4.0              #для чатов на websocket-ах
@@ -38,6 +38,7 @@ dependencies:
   connection_notifier: ^2.0.1           #для отслеживания connect-соединения
   #  image_picker: ^1.0.4                    #для выбора фоток из галлереи
   responsive_framework: ^1.1.1            #для адаптивного интерфейса под разные размеры
+  bind3: ^0.0.5            #для адаптивного интерфейса под разные размеры
 
   #UI Packages
   flutter_svg: ^2.0.9                     #для векторных изображений
@@ -63,7 +64,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.7                    #для кодогенерации
   mobx_codegen: ^2.6.0                    #для кодогенерации стейт-менеджеров
-  auto_route_generator: ^7.3.2            #для кодогенерации навигации
+  auto_route_generator: ^8.0.0           #для кодогенерации навигации
   auto_mappr: ^2.2.0                      #для кодогенерации сопоставителей dto к моделям
   json_serializable: ^6.7.1               #для кодогенерации моделей и dto
   freezed: ^2.4.6                         #для кодогенерации моделей и dto
