update validators & remove RouteController

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   #share_plus: ^7.1.0                     #для кнопки поделится
 
   #Compute Packages
-#  phone_number: ^2.0.1                    #для валидации номера телефона любого региона
+  phone_numbers_parser: ^8.2.1            #для валидации номера телефона любого региона
 #  image: ^4.1.3                           #для расширенния функционала изображений
 #  mime: ^1.0.4                            #для сбора и записи mime type
 
